src/test/deca/syntax/parser/valid/test/test_pars_val_printx.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction printx.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023


{
    printx("Hello");
}